Unreleased

Fixed
    Container snapshot breaks loading deployments

Changed
    UI tweaks including
        sidebar width
        Collapse server by default when there is > 10 containers (#114)
        Reload hosts + container tree on alias change
        Show cpu cores on the dashboard

Added
    Let user choose shell when opening container console session (#116)

0.4.0

Added
    Allow setting container settings when creating them (#57)
    Copy profiles between hosts (#94)
    Choose host to restore container snapshot to (#96)
    Delete host (#99)
    Reload server dashboard after finishing creating a container (#97)

Changed
    Redirect by default to https (#86)
    Spelling of "Stoping" (#95)
    Use $.confirm instead of modal for copying container
    Use more consistent card theming & add a light gray background
    Bump composer libaries to fix (#101)
    Only reload container tree instead of dashboard in certian instances (#109, #105)
    Stop host online / offline from appearing over and over (#110)

Fixed
    Breadcrumb navigation (#103)

0.3.0

Fixed
    Fix ui doesn't load when server is offline (#77)
    Cant view projects page if one host doesn't have projects endpoint (#76)
    Show host on container information (#80)
    Finding os version for a container (#79)
    The spelling of storage (#81)
    Curl bug with centos7 (#84)
    UI broken when host offline (#83)

Added
    Store total storage usage for fleet analytics (#75)
    Support for CentOS7 (#84)
    Basic network management (#4)