@@ -29,16 +29,18 @@ class GetHostsContainers
 
             $client = $this->client->getANewClient($host["Host_ID"]);
             $containers = $client->containers->all();
+            $containers = $this->addContainersState($client, $containers);
+            ksort($containers, SORT_STRING | SORT_FLAG_CASE);
             $details[$indent] = [
                 "online"=>true,
                 "hostId"=>$host["Host_ID"],
-                "containers"=>$this->getContainersState($client, $containers)
+                "containers"=>$containers
             ];
         }
         return $details;
     }
 
-    public function getContainersState($client, $containers)
+    private function addContainersState($client, $containers)
     {
         $details = array();
         foreach ($containers as $container) {
